kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-repo-server
spec:
  type: ClusterIP
  selector:
    app: elastic-repo-server
  ports:
    - port: 80
      targetPort: 8080
